--- a/DesignPatterns/DesignPatterns/build.gradle
+++ b/DesignPatterns/DesignPatterns/build.gradle
@@ -20,6 +20,9 @@ dependencies {
 	compile group: 'org.reflections', name: 'reflections', version: '0.9.5-RC2'
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 	compile group: 'com.google.inject', name: 'guice', version: '4.0'
+	compile 'io.reactivex.rxjava2:rxjava:2.2.0'
+	compile group: 'org.springframework.statemachine', name: 'spring-statemachine-core', version: '2.1.1.RELEASE'
+	
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
